# met-linux

./: .gitignore  .pre-commit-config.yaml  README.md  default.nix  flake.nix  go.mod  gomod2nix.toml  main.go  mkdocs.yml  pyproject.toml  shell.nix
docs/: index.md
docs/getting-started/: prerequisites.md
pkgs/: default.nix  minutor.nix  worldpainter.nix
qgis/: controller.go  preprocess.go  preprocess_data.go  tiles.go
scripts/: qgiscontroller.py
util/: config.go
